Add CSRF check to forms

--- a/templates/images.html
+++ b/templates/images.html
@@ -3,34 +3,37 @@
 {% block title %}Reseptin kuvat{% endblock %}
 
 {% block content %}
-<h2>Reseptin kuvat</h2>
+<h2>{{ item.title }}</h2>
+<h3>Reseptin kuvat</h3>
 
 <p>
 Reseptissä on {{ images | count }} kuvaa.
 </p>
 
 <form action="/remove_images" method="post">
-{% for image in images %}
-<input type="checkbox" name="image_id" value="{{ image.id }}">
-<img src="/image/{{ image.id }}" />
-<br />
-{% endfor %}
-<input type="hidden" name="item_id" value="{{ item.id }}">
-<p>   
-<input type="submit" value="Poista valitut" />
-</p>
+  {% for image in images %}
+  <input type="checkbox" name="image_id" value="{{ image.id }}">
+  <img src="/image/{{ image.id }}" />
+  <br />
+  {% endfor %}
+  <input type="hidden" name="item_id" value="{{ item.id }}">
+  <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
+  <p>   
+    <input type="submit" value="Poista valitut" />
+  </p>
 </form>
 
-<h3>Lisää uusi kuva</h3>
+<h4>Lisää uusi kuva</h4>
 <form action="/add_image" method="post" enctype="multipart/form-data">
-<p>
+  <p>
     Kuva: <input type="file" name="image" accept=".png" />
-</p>
-<input type="hidden" name="item_id" value="{{ item.id }}">   
-<input type="submit" value="Lähetä" />
+  </p>
+  <input type="hidden" name="item_id" value="{{ item.id }}">   
+  <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
+  <input type="submit" value="Lähetä" />
 </form>
 
 <p>
-<a href="/item/{{ item.id }}">Palaa reseptiin</a>
+  <a href="/item/{{ item.id }}">Palaa reseptiin</a>
 </p>
 {% endblock %}
